[package]
name = "cosmos_tools"
version = "0.1.0"
authors = ["dk <dk@dklab.co>"]
description = "A set of tools to interact with any Cosmos based blockchain"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
